ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

07/13/02 russ

	* added dBodySetForce(), dBodySetTorque(), dWorldImpulseToForce(),
	  dBodyGetPosRelPoint(), dBodyGetPosRelPoint(), dBodyVectorToWorld(),
	  dBodyVectorFromWorld().

	* added dBodyGetPointVel() (thanks to Colin Reed).

	* added a new C++ interface (from Martin C. Martin, with modifications
	  by russ). the old C++ interface is now in odecpp_old.h.

06/25/02 russ

	* added an additional BSD-style licensing option for ODE.

06/23/02 russ

	* added dCloseODE(), contributed by Nate Waddoups and David McClurg.

05/16/02 russ

	* added dSpaceQuery(), contributed by Nate Waddoups.

04/07/02 russ

	* added a section to the documentation for universal joints.
	  this includes a picture of the joint.

04/05/02 russ

	* added a universal joint class (generously contributed by
	  Martin C. Martin). it doesn't (yet) have a motor or joint limits,
	  but it does come with tests.

03/11/02 russ

	* makefile changes to accomodate OSs with command line length
	  limitations (thanks to Norman Lin).

01/06/02 russ

	* added the dBodySetGravityMode() and dBodyGetGravityMode()
	  functions, which change the dxBodyNoGravity body flag.

	* added support for building a DLL with MSVC - there is now a
	  msvc-dll target. thanks to Norman Lin for doing this.

12/28/01 russ

	* added the dParamCFM joint parameter.

12/24/01 russ

	* reworked the build system to make it more cross-platform.
	  there is now a single top-level makefile and a configurator.c
	  program. see the INSTALL file for details.

12/04/01 russ

	* the "angular motor" joint has been completed, and a new section
	  has been added to the documentation.

11/26/01 russ
